@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.84 2005/03/17 06:52:55 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.85 2005/03/17 18:02:34 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  17 Mar 2005; Andrew Gaffney <agaffey@gentoo.org>
+  Add 2>&1 to cmd in spawn()
 
   16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Modified GLIUtility.exitsuccess() to work with return value from
